--- a/resume.html
+++ b/resume.html
@@ -2,5 +2,11 @@
 layout: default
 title: Emily Gorey
 ---
-<h1>I am content!</h1>
-<h2>HARHAHRAR</h2>
+<article class="resume">
+  <iframe
+    src="https://drive.google.com/file/d/15YrZxjKT4Fj78ZNjLT5JHJtEAvFgc3ej/preview"
+    width="100%"
+    height="100%"
+  >
+  </iframe>
+</article>
