--- a/resume.html
+++ b/resume.html
@@ -4,10 +4,12 @@ title: Emily Gorey
 resume_active: active
 ---
 <article class="resume">
-  <iframe
-    src="https://drive.google.com/file/d/15YrZxjKT4Fj78ZNjLT5JHJtEAvFgc3ej/preview"
-    width="100%"
-    height="100%"
-  >
-  </iframe>
+  <section class="container">
+    <iframe
+      src="https://drive.google.com/file/d/15YrZxjKT4Fj78ZNjLT5JHJtEAvFgc3ej/preview"
+      width="100%"
+      height="100%"
+    >
+    </iframe>
+  </section>
 </article>
