responsive fixes to home and about

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@ about_active: active
 <article class="about">
   <section class="container">
     <div class="row">
-      <div class="col-md-6 left">
+      <div class="col-xl-6 col-md-12 col-sm-12 left">
         <img src="/img/emily2.jpg" alt="">
       </div>
-      <div class="col-md-6 right">
+      <div class="col-xl-6 col-md-12 col-sm-12 right">
         <h1>Hi, I'm Emily!</h1>
         <p>
           The platypus (Ornithorhynchus anatinus), sometimes referred to as the duck-billed platypus, is a semiaquatic egg-laying mammal endemic to eastern Australia, including Tasmania. Together with the four species of echidna.
