set up portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,5 +3,18 @@ layout: default
 title: Emily Gorey
 portfolio_active: active
 ---
-<h1>I am content!</h1>
-<h2>HARHAHRAR</h2>
+<article class="portfolio">
+  <section class="columns">
+    <img src="/blog/img/image1.jpg" alt="">
+    <img src="/blog/img/image2.jpg" alt="">
+    <img src="/blog/img/image3.jpg" alt="">
+    <img src="/blog/img/image4.jpg" alt="">
+    <img src="/blog/img/image3.jpg" alt="">
+    <img src="/blog/img/image4.jpg" alt="">
+    <img src="/blog/img/image3.jpg" alt="">
+    <img src="/blog/img/image3.jpg" alt="">
+    <img src="/blog/img/image4.jpg" alt="">
+    <img src="/blog/img/image1.jpg" alt="">
+    <img src="/blog/img/image2.jpg" alt="">
+  </section>
+</article>
