added feather light zoom viewing for portfolio and blog

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,16 +5,42 @@ portfolio_active: active
 ---
 <article class="portfolio">
   <section class="columns">
-    <img src="/blog/img/image1.jpg" alt="">
-    <img src="/blog/img/image2.jpg" alt="">
-    <img src="/blog/img/image3.jpg" alt="">
-    <img src="/blog/img/image4.jpg" alt="">
-    <img src="/blog/img/image3.jpg" alt="">
-    <img src="/blog/img/image4.jpg" alt="">
-    <img src="/blog/img/image3.jpg" alt="">
-    <img src="/blog/img/image3.jpg" alt="">
-    <img src="/blog/img/image4.jpg" alt="">
-    <img src="/blog/img/image1.jpg" alt="">
-    <img src="/blog/img/image2.jpg" alt="">
+    
+    <!-- COLUMN 1 -->
+    <div class="">
+      <a href="#" data-featherlight="/blog/img/image1.jpg">
+        <img src="/blog/img/image1.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/blog/img/image3.jpg">
+        <img src="/blog/img/image3.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/blog/img/image1.jpg">
+        <img src="/blog/img/image1.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/blog/img/image2.jpg">
+        <img src="/blog/img/image2.jpg" alt="">
+      </a>
+    </div>
+
+    <!-- COLUMN 2 -->
+    <div class="">
+      <a href="#" data-featherlight="/blog/img/image6.jpg">
+        <img src="/blog/img/image6.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/blog/img/image4.jpg">
+        <img src="/blog/img/image4.jpg" alt="">
+      </a>
+    </div>
+
+    <!-- COLUMN 3 -->
+    <div class="">
+      <a href="#" data-featherlight="/blog/img/image6.jpg">
+        <img src="/blog/img/image6.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/blog/img/image5.jpg">
+        <img src="/blog/img/image5.jpg" alt="">
+      </a>
+    </div>
+
   </section>
 </article>
