--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,13 @@ resume_active: active
 ---
 <article class="resume">
   <section class="container">
+    
+    <!-- Replace the following <iframe></iframe> with your new one -->
     <iframe
       src="https://drive.google.com/file/d/15YrZxjKT4Fj78ZNjLT5JHJtEAvFgc3ej/preview"
       width="100%"
       height="100%"
-    >
-    </iframe>
+    ></iframe>
+
   </section>
 </article>
