--- a/about.html
+++ b/about.html
@@ -7,9 +7,14 @@ about_active: active
   <section class="container">
     <div class="row">
       <div class="col-xl-6 col-md-12 col-sm-12 left">
+
+        <!-- CHANGE PROFILE IMAGE HERE -->
         <img src="/img/emily2.jpg" alt="">
+
       </div>
       <div class="col-xl-6 col-md-12 col-sm-12 right">
+
+        <!-- CHANGE TEXT HERE -->
         <h1>Hi, I'm Emily!</h1>
         <p>
           The platypus (Ornithorhynchus anatinus), sometimes referred to as the duck-billed platypus, is a semiaquatic egg-laying mammal endemic to eastern Australia, including Tasmania. Together with the four species of echidna.
@@ -20,6 +25,7 @@ about_active: active
         <p>
           The animal is the sole living representative of its family (Ornithorhynchidae) and genus (Ornithorhynchus), though a number of related species appear in the fossil record.
         </p>
+        
       </div>
     </div>
   </section>
