Testing a commit thru github and not locally.

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ about_active: active
       <div class="col-xl-6 col-md-12 col-sm-12 right">
 
         <!-- CHANGE TEXT HERE -->
-        <h1>Hi, I'm Emily!</h1>
+        <h1>Hi, I'm Emily</h1>
         <p>
           The platypus (Ornithorhynchus anatinus), sometimes referred to as the duck-billed platypus, is a semiaquatic egg-laying mammal endemic to eastern Australia, including Tasmania. Together with the four species of echidna.
         </p>
