--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ contact_active: active
     <h1>Let's Chat</h1>
     <div class="row">
       <div class="col-lg-8 col-md-12">
-        <form class="contact-form" method="POST" action="http://formspree.io/dng5@umd.edu">
+        <form class="contact-form" method="POST" action="http://formspree.io/emilyrosegorey@gmail.com">
           <label>Name:</label>
           <input type="text" required name="name" value="" placeholder="John Doe">
           <br>
