--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@ portfolio_active: active
     <!-- COLUMN 1 -->
     <div class="">
       <a href="#" data-featherlight="/portfolio/img/image1.jpg">
-        <img src="/portfolio/img/image1.jpg" alt="">
+        <img src="/portfolio/img/IMG_5150.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image3.jpg">
         <img src="/portfolio/img/image3.jpg" alt="">
