--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,30 +12,30 @@ portfolio_active: active
         <img src="/portfolio/img/IMG_5150.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image3.jpg">
-        <img src="/portfolio/img/image3.jpg" alt="">
+        <img src="/portfolio/img/IMG_5719.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image1.jpg">
-        <img src="/portfolio/img/image1.jpg" alt="">
-      </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
-        <img src="/portfolio/img/image2.jpg" alt="">
+        <img src="/portfolio/img/IMG_6489.jpg" alt="">
       </a>
     </div>
 
     <!-- COLUMN 2 -->
     <div class="">
       <a href="#" data-featherlight="/portfolio/img/image6.jpg">
-        <img src="/portfolio/img/image6.jpg" alt="">
+        <img src="/portfolio/img/IMG_7318.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image4.jpg">
-        <img src="/portfolio/img/image4.jpg" alt="">
+        <img src="/portfolio/img/IMG_8317.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_7261.jpg" alt="">
       </a>
     </div>
 
     <!-- COLUMN 3 -->
     <div class="">
       <a href="#" data-featherlight="/portfolio/img/image6.jpg">
-        <img src="/portfolio/img/image6.jpg" alt="">
+        <img src="/portfolio/img/IMG_8355.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image5.jpg">
         <img src="/portfolio/img/image5.jpg" alt="">
