--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,10 @@ portfolio_active: active
         <img src="/portfolio/img/IMG_8355.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image5.jpg">
-        <img src="/portfolio/img/image5.jpg" alt="">
+        <img src="/portfolio/img/portfolio2.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/portfolio/img/image5.jpg">
+        <img src="/portfolio/img/portfolio3.jpg" alt="">
       </a>
     </div>
 
