--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,12 @@ portfolio_active: active
       <a href="#" data-featherlight="/portfolio/img/image1.jpg">
         <img src="/portfolio/img/IMG_6489.jpg" alt="">
       </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_7378.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_5056.jpg" alt="">
+      </a>
     </div>
 
     <!-- COLUMN 2 -->
@@ -30,18 +36,27 @@ portfolio_active: active
       <a href="#" data-featherlight="/portfolio/img/image2.jpg">
         <img src="/portfolio/img/IMG_7261.jpg" alt="">
       </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_2084.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_7360.jpg" alt="">
+      </a>
     </div>
 
     <!-- COLUMN 3 -->
     <div class="">
       <a href="#" data-featherlight="/portfolio/img/image6.jpg">
-        <img src="/portfolio/img/IMG_8355.jpg" alt="">
+        <img src="/portfolio/img/portfolio3.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image5.jpg">
         <img src="/portfolio/img/portfolio2.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/image5.jpg">
-        <img src="/portfolio/img/portfolio3.jpg" alt="">
+        <img src="/portfolio/img/IMG_8355.jpg" alt="">
+      </a>
+      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+        <img src="/portfolio/img/IMG_7327.jpg" alt="">
       </a>
     </div>
 
