--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,54 +8,54 @@ portfolio_active: active
 
     <!-- COLUMN 1 -->
     <div class="">
-      <a href="#" data-featherlight="/portfolio/img/image1.jpg">
-        <img src="/portfolio/img/IMG_5150.jpg" alt="">
+      <a href="#" data-featherlight="/portfolio/img/IMG_2084.jpg">
+        <img src="/portfolio/img/IMG_2084.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image3.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_5719.jpg">
         <img src="/portfolio/img/IMG_5719.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image1.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_6489.jpg">
         <img src="/portfolio/img/IMG_6489.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_7378.jpg">
         <img src="/portfolio/img/IMG_7378.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_5056.jpg">
         <img src="/portfolio/img/IMG_5056.jpg" alt="">
       </a>
     </div>
 
     <!-- COLUMN 2 -->
     <div class="">
-      <a href="#" data-featherlight="/portfolio/img/image6.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_7318.jpg">
         <img src="/portfolio/img/IMG_7318.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image4.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_8317.jpg">
         <img src="/portfolio/img/IMG_8317.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_7261.jpg">
         <img src="/portfolio/img/IMG_7261.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
-        <img src="/portfolio/img/IMG_2084.jpg" alt="">
+      <a href="#" data-featherlight="/portfolio/img/IMG_5150.jpg">
+        <img src="/portfolio/img/IMG_5150.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_7360.jpg">
         <img src="/portfolio/img/IMG_7360.jpg" alt="">
       </a>
     </div>
 
     <!-- COLUMN 3 -->
     <div class="">
-      <a href="#" data-featherlight="/portfolio/img/image6.jpg">
+      <a href="#" data-featherlight="/portfolio/img/portfolio3.jpg">
         <img src="/portfolio/img/portfolio3.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image5.jpg">
+      <a href="#" data-featherlight="/portfolio/img/portfolio2.jpg">
         <img src="/portfolio/img/portfolio2.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image5.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_8355.jpg">
         <img src="/portfolio/img/IMG_8355.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/image2.jpg">
+      <a href="#" data-featherlight="/portfolio/img/IMG_7327.jpg">
         <img src="/portfolio/img/IMG_7327.jpg" alt="">
       </a>
     </div>
