--- a/resume.html
+++ b/resume.html
@@ -7,11 +7,10 @@ resume_active: active
   <section class="container">
     
     <!-- Replace the following <iframe></iframe> with your new one -->
-    <iframe
-      src="https://drive.google.com/file/d/15YrZxjKT4Fj78ZNjLT5JHJtEAvFgc3ej/preview"
-      width="100%"
-      height="100%"
+    <iframe 
+      src="https://drive.google.com/file/d/1YPStxu9JDfDLQyjT1tYaRitYnvzHV2yu/preview" 
+      width="640" 
+      height="480"
     ></iframe>
-
   </section>
 </article>
