--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,8 +30,8 @@ portfolio_active: active
       <a href="#" data-featherlight="/portfolio/img/IMG_8317.jpg">
         <img src="/portfolio/img/IMG_8317.jpg" alt="">
       </a>
-      <a href="#" data-featherlight="/portfolio/img/IMG_7261.jpg">
-        <img src="/portfolio/img/IMG_7261.jpg" alt="">
+      <a href="#" data-featherlight="/portfolio/img/blue hat.jpg">
+        <img src="/portfolio/img/blue hat.jpg" alt="">
       </a>
       <a href="#" data-featherlight="/portfolio/img/IMG_5150.jpg">
         <img src="/portfolio/img/IMG_5150.jpg" alt="">
