--- a/about.html
+++ b/about.html
@@ -17,15 +17,15 @@ about_active: active
         <!-- CHANGE TEXT HERE -->
         <h1>Hi, I'm Emily</h1>
         <p>
-          The platypus (Ornithorhynchus anatinus), sometimes referred to as the duck-billed platypus, is a semiaquatic egg-laying mammal endemic to eastern Australia, including Tasmania. Together with the four species of echidna.
+          The quick rundown:  I’m a twenty-year-old who has aged herself at least 50 years due to a favorite hobby, embroidering. I like leather journals, thunderstorms, musty books, loud but modest art, finding a hidden gem at the thrift store, music I can dramatically look out the window to, pressed flowers, quirky personalities, the smell of laundry and lavender, movies with “Breakfast” in the title, and lists. 
+.
         </p>
         <p>
-          It is one of the five extant species of monotremes, the only mammals that lay eggs instead of giving birth to chicken little filler live young.
+         
+The usual resume-sort-of facts: My name is Emily Rose Gorey (my mom calls me Emily Rose as well as Emmy Moo, but Emily is just fine) and I’m a sophomore at the University of Maryland. I study Marketing in the Robert H. Smith School of Business with a heavy concentration in Studio Art (this means that I couldn’t drop my love for art so any breathing room in my schedule is stuffed with time for creating). Outside of class, I have the pleasure of helping the Bahá’í Chair for World Peace with its marketing strategies. Just like the beauty pageant contestants in Miss Congeniality, I too believe that the one most important thing our society needs is world peace. What’s amazing is how the Bahá’í Chair is helping make such a lofty, tenacious goal seem a little more approachable. Caring so deeply about this organization and what they do makes promoting and branding them a heck of a lot easier for me. I love what I do.
+
         </p>
         <p>
-          The animal is the sole living representative of its family (Ornithorhynchidae) and genus (Ornithorhynchus), though a number of related species appear in the fossil record.
-        </p>
-        
       </div>
     </div>
   </section>
