--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,6 +43,9 @@ portfolio_active: active
 
     <!-- COLUMN 3 -->
     <div class="">
+      <a href="#" data-featherlight="/portfolio/img/succulent.jpeg">
+        <img src="/portfolio/img/succulent.jpeg" alt="">
+      </a>
       <a href="#" data-featherlight="/portfolio/img/portfolio3.jpg">
         <img src="/portfolio/img/portfolio3.jpg" alt="">
       </a>
