--- a/resume.html
+++ b/resume.html
@@ -7,10 +7,9 @@ resume_active: active
   <section class="container">
     
     <!-- Replace the following <iframe></iframe> with your new one -->
-    <iframe 
-      src="https://drive.google.com/file/d/16UYVXWFbgtmSkJS8ebjmzkppHDbGKTcL/preview" 
-      width="640" 
-      height="480"
-    ></iframe>
+    <iframe src="https://drive.google.com/file/d/1D3DY5XW43Sd9Y6PaAMNDvDzqmTVsWHeL/preview" 
+            width="640" 
+            height="480">
+    </iframe>
   </section>
 </article>
