--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ about_active: active
       <div class="col-xl-6 col-md-12 col-sm-12 left">
 
         <!-- CHANGE PROFILE IMAGE HERE -->
-        <img src="/img/emily2.jpg" alt="">
+        <img src="/img/about.jpg" alt="">
 
       </div>
       <div class="col-xl-6 col-md-12 col-sm-12 right">
