--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@ about_active: active
         <!-- CHANGE TEXT HERE -->
         <h1>Hi, I'm Emily</h1>
         <p>
-          The quick rundown:  I’m a twenty-year-old who has aged herself at least 50 years due to a favorite hobby, embroidering. I like leather journals, thunderstorms, musty books, loud but modest art, finding a hidden gem at the thrift store, music I can dramatically look out the window to, pressed flowers, quirky personalities, the smell of laundry and lavender, movies with “Breakfast” in the title, and lists.
+          The quick rundown:  I’m a twenty-one-year-old who has aged herself at least 50 years due to a favorite hobby, embroidering. I like leather journals, thunderstorms, musty books, loud but modest art, finding a hidden gem at the thrift store, music I can dramatically look out the window to, pressed flowers, quirky personalities, the smell of laundry and lavender, movies with “Breakfast” in the title, and lists.
         </p>
         <p>
          
-The usual resume-sort-of facts: My name is Emily Rose Gorey (my mom calls me Emily Rose as well as Emmy Moo, but Emily is just fine) and I’m a sophomore at the University of Maryland. I study Marketing in the Robert H. Smith School of Business with a heavy concentration in Studio Art (this means that I couldn’t drop my love for art so any breathing room in my schedule is stuffed with time for creating). Outside of class, I have the pleasure of helping the Bahá’í Chair for World Peace with its marketing strategies. Just like the beauty pageant contestants in Miss Congeniality, I too believe that the one most important thing our society needs is world peace. What’s amazing is how the Bahá’í Chair is helping make such a lofty, tenacious goal seem a little more approachable. Caring so deeply about this organization and what they do makes promoting and branding them a heck of a lot easier for me. I love what I do.
-
+          The usual resume-sort-of facts: My name is Emily Rose Gorey (my mom calls me Emily Rose as well as Emmy Moo, but Emily is just fine) and I’m a junior at the University of Maryland. I study Marketing in the Robert H. Smith School of Business with a heavy concentration in Design thanks to the Strategic Design and Innovation Fellows program. Outside of class, I have the pleasure of helping the Bahá’í Chair for World Peace with its marketing strategy. Just like the beauty pageant contestants in Miss Congeniality, I too believe that the one most important thing our society needs is world peace. What’s amazing is how the Bahá’í Chair is helping make such a lofty, tenacious goal seem a little more approachable. Caring so deeply about this organization and what they do makes promoting and branding them a heck of a lot easier for me. I love what I do.
         </p>
         <p>
+         
       </div>
     </div>
   </section>
